feat: land @ForEntity activation + fix review H1/H2
== H1 (docs): 修正 5.10.4 Enforcer 配置中错误的 Flowable 坐标
- flowable-spring-boot-starter → flowable-spring-boot-starter-process
  Flowable 8 拆分了 starter（process/idm/eventregistry/cmmn…），pom.xml 实际依赖
  -process 子 starter；按文档错误配置会让 requireSameVersions 规则匹配不到
  实际依赖，形同虚设（与 8.3 自检测试想防的"护栏静默失效"同类）

== H2 (code+docs): @ForEntity 复合注解落地，消除 8.1/8.4 与路线图 P1 的内部矛盾
- platform-core 新增 @ForEntity 注解 + EntityCondition
  以 platform.entity 为唯一激活开关源，消除 @Profile 与 platform.entity 双轨
- 8 个实体模块扩展点类 @Profile("alpha"|"beta") → @ForEntity(EntityType.ALPHA|BETA)
  AlphaPricingPolicy / RiskCheckStep / AlphaRiskCheckDelegate / AlphaDocumentGenerator
  BetaPricingPolicy / AuditExtraStep / BetaAuditExtraDelegate / BetaDocumentGenerator
- 2 处 ArchUnit 规则同步：beAnnotatedWith(Profile) → beMetaAnnotatedWith(Conditional)
- test-jar 基础设施：
  platform-core maven-jar-plugin test-jar goal + entity-alpha/beta <type>test-jar</type> 消费
- 新增 PricingPolicyContractTest 抽象基类
  防supports 与 @ForEntity value 漂移；Alpha/Beta 子类继承落地
- 同步附带更新：PricingPolicy / OrderStep Javadoc，PolicyRegistry 报错消息，
  PolicyRegistryTest 注释，BPMN 注释
- 文档同步：
  主文档 5.3 注脚状态改为"已落地"，5.3 末段重写为 @ForEntity 时代，
  6.1 Flyway 目录注释按 platform.entity 拼接，6.3 开关模型说明加 @ForEntity 直接读，
  8.4 加落地状态段，路线图 @ForEntity + 契约基类从 P1 标注"已落地"，
  P0 行 @ForEntity 枚举化标 ✅；CLAUDE.md / README 章节映射同步

== 验证
mvn -B verify -Palpha / -Pbeta 双装配全绿（25 测试通过，12 跳过——对侧实体
app 测试门控，符合 CLAUDE.md 预期）

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>